# TSS.MSR

TSS.CPP/: CMakeLists.txt  Config.cmake.in  Makefile
TSS.CPP/Samples/: DocSamples.cpp  Samples.cpp  Samples.h  TSS.CPP Samples.vcxproj  TpmConfig.cpp  TpmConfig.h  TpmCppTest.cpp
TSS.CPP/Src/: Crypto.cpp  Serialize.cpp  Tpm2.cpp  TpmAuthSessions.cpp  TpmDevice.cpp  TpmExtensions.cpp.snips  TpmFileDevice.cpp  TpmHelpers.cpp  TpmPolicy.cpp  TpmStructure.cpp  TpmTypeExtensions.cpp  TpmTypes.cpp  stdafx.cpp  stdafx.h
TSS.CPP/include/: Crypto.h  Helpers.h  Serialize.h  Tpm2.h  TpmDevice.h  TpmFileDevice.h  TpmHelpers.h  TpmMarshal.h  TpmPolicy.h  TpmStructure.h  TpmTypes.h  Tss.h  fdefs.h
TssCodeGen/src/: CGenCpp.cs  CodeGenBase.cs  Program.cs  TargetLang.cs  TpmTranslations.cs
